--- a/style/css/index.css
+++ b/style/css/index.css
@@ -51,6 +51,7 @@ h1{
 .main > div{
     background: rgba(255, 255, 255, 0.281);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     margin-bottom: 50px;
 }
 
@@ -66,6 +67,7 @@ h1{
     margin: 0;
     background: rgba(255, 255, 255, 0.548);
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .theme_main_zone > *{
@@ -118,6 +120,7 @@ h1{
     align-items: center;
     background: rgba(255, 255, 255, 0.795);
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(10px);
     color: rgb(73, 78, 94);
     border-bottom: 2px solid rgba(255, 166, 0, 0.527);
     padding: 20px;
@@ -355,10 +358,20 @@ h1{
     padding: 20px;
     background: linear-gradient(45deg, rgba(255, 166, 0, 0.281), rgba(255, 192, 203, 0.541) 80%);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     box-shadow: 0px 10px 10px rgba(128, 128, 128, 0.562);
     border-radius: 15px;
     transition: all .15s ease-in;
     cursor: pointer;
+}
+
+.titre[data-show="true"] i, .titre[data-show="false"] i{
+    color: black;
+    transition: all ease-in .2s;
+}
+
+.titre[data-show="false"] i{
+    transform: rotate(90deg);
 }
 
 #projet > div:hover{
